# wls-svm

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: theory.md
notebooks/: test.ipynb
src/wls_svm/: __init__.py  lssvm.py  model_tools.py
