[project]
name = "WLS-SVM"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "scipy>=1.16.1",
    "torch>=2.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
package = true
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
ipynb = [
    "ipykernel>=6.30.1",
    "notebook>=7.4.5",
]
